update 26/4 - confirm merge usageInfo